[package]
name = "hyprtitle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
hyprland = { version = "0.4.0-alpha.2", features = ["silent"] }
serde_json = "1.0.115"
